# atlas-provider-sqlalchemy

./: .gitignore  DEVELOPMENT.md  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml  publish.yaml
atlas_provider_sqlalchemy/: ddl.py  main.py  parser.py
cli/: main.py
tests/: atlas-script.hcl  atlas-standalone.hcl  ddl_mysql.sql  ddl_postgres.sql  load_models.py  test_caching_fix.py  test_main.py
tests/broken/: models.py
tests/invalid_models/: invalid_models.py  models.py
tests/migrations/clickhouse/: 20251007100727.sql  atlas.sum
tests/migrations/mssql/: 20240125192026.sql  atlas.sum
tests/migrations/mysql/: 20231227113812.sql  atlas.sum
tests/migrations/postgresql/: 20231227113709.sql  atlas.sum
tests/migrations/sqlite/: 20231227113835.sql  atlas.sum
tests/models/: ddl_mysql.sql  ddl_postgres.sql  models.py
tests/old_models/: ddl_mysql.sql  ddl_postgres.sql  models.py
tests/structured_models/: base.py  ddl_mysql.sql  ddl_postgres.sql
tests/structured_models/models/: user.py
tests/tables/: ddl_mysql.sql  ddl_postgres.sql
tests/testdata/models/: ddl_clickhouse.sql  ddl_mysql.sql  ddl_postgres.sql  models.py
tests/testdata/multi_path/: ddl_clickhouse.sql  ddl_mysql.sql  ddl_postgresql.sql
tests/testdata/multi_path/models1/: models.py
tests/testdata/multi_path/models2/: models.py
tests/testdata/old_models/: ddl_clickhouse.sql  ddl_mysql.sql  ddl_postgres.sql  models.py
tests/testdata/structured_models/: base.py  ddl_clickhouse.sql  ddl_mysql.sql  ddl_postgres.sql
tests/testdata/structured_models/models/: user.py
tests/testdata/tables/: ddl_clickhouse.sql  ddl_mysql.sql  ddl_postgres.sql  tables.py
