[tool.poetry]
name = "atlas-provider-sqlalchemy"
version = "0.2.0"
description = "Load sqlalchemy models into an Atlas project."
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "atlas_provider_sqlalchemy"}]

[tool.poetry.dependencies]
python = "^3.9"
typer = ">0.9.0,<=1.0.0"
sqlalchemy = "^2.0.41"
clickhouse-sqlalchemy = "^0.3.2"

[tool.pyrefly]
project-includes = [
    "atlas_provider_sqlalchemy/**/*",
    "tests/**/*",
]
project-excludes = [
    "**/node_modules",
    "**/__pycache__",
    "**/*venv/**/*",
    "tests/testdata/**/*",
]

[tool.ruff]
exclude = ["tests/testdata/**/*"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
tox = "^4.15.0"
ruff = "^0.12.11"
autopep8 = "^2.0.4"
sqlalchemy = "^2.0.41"
pyrefly = "^0.30.0"

[tool.poetry.group.inttests]
optional = true

[tool.poetry.group.inttests.dependencies]
sqlalchemy = "^2.0.21"

[tool.poetry.scripts]
atlas-provider-sqlalchemy = "atlas_provider_sqlalchemy.main:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
